--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,29 +9,28 @@
 <meta name="author" content="Dustan Kasten">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="assets/styles.css">
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Radley:400,400italic'>
+<link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
 <!--[if lt IE 9]><p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p><![endif]-->
 
 <header id="masthead" rel="banner">
   <a href="/">Dustan Kasten</a>
+  <span>Bringing joy to the internet acronyms since 2010</span>
 </header>
 <div class="content">
   {{ content }}
-</div>
-
-<footer>
+</div><footer id="footer">
   <div class="vcard">
     <span class="fn">Dustan Kasten</span>
-    <div class="org">Skookum Digital Works</div>
+    <div class="title">Front-end Web Developer</div>
+    <!--<div class="org">Skookum Digital Works</div>-->
     <a class="email" href="mailto:dustan.kasten@gmail.com">dustan.kasten@gmail.com</a>
     <a class="url" href="http://github.com/iamdustan">github.com/iamdustan</a>
     <a class="url" href="http://twitter.com/iamdustan">twitter.com/iamdustan</a>
   </div>
-  <div class="rss">
-    <a href="http://feeds.feedburner.com/dustankasten"><img src="/images/rss.png" alt="Subscribe to RSS Feed"></a>
-  </div>
+  <!--<div class="rss"><a href="http://feeds.feedburner.com/dustankasten"><img src="/images/rss.png" alt="Subscribe to RSS Feed"></a></div>-->
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 <script>var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script></body></html>
