Some responsiveness and a tag icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
 
 <header id="masthead" rel="banner">
   <a href="/">Dustan Kasten</a>
-  <span>Bringing joy to the internet acronyms since 2010</span>
+  <p>
+    <span class="dos">since 2010</span>
+    <span class="uno">Bringing joy to the internet acronyms</span>
+  </p>
 </header>
 <div class="content">
   {{ content }}
