--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,14 +29,23 @@ layout: default
 
   <div class="entry-content">{{ content }}</div>
 
-  <ul class="posts">
-    {% assign p = page.previous %}{% if p %}
-    <li><span>Previous: {{ p.date | date_to_string }}</span> &raquo; <a href="{{ p.url }}">{{ p.title }}</a></li>
-    {% endif %}
-    {% assign p = page.next %}{% if p %}
-    <li><span>    Next: {{ p.date | date_to_string }}</span> &raquo; <a href="{{ p.url }}">{{ p.title }}</a></li>
-    {% endif %}
-  </ul>
+  <aside class="related">
+    <header>Thoughts of Related Time</header>
+    <ul>
+      {% assign p = page.previous %}{% if p %}
+      <li>
+        <a href="{{ p.url }}">{{ p.title }}</a>
+        <span>A thought I had on {{ page.date | date: "%B %d, %Y" }}</span>
+      </li>
+      {% endif %}
+      {% assign p = page.next %}{% if p %}
+      <li>
+        <a href="{{ p.url }}">{{ p.title }}</a>
+        <span>Another thought I had on {{ page.date | date: "%B %d, %Y" }}</span>
+      </li>
+      {% endif %}
+    </ul>
+  </aside>
 </div>
 
 
