--- a/_layouts/tags_index.html
+++ b/_layouts/tags_index.html
@@ -3,16 +3,20 @@ layout: default
 ---
 
 <h1 class="post_title">{{ page.title }}</h1>
-<ul class="archive-list">
+<ul class="archive-list posts hfeed">
 {% for post in site.posts %}
   {% for tag in post.tags %}
     {% if tag == page.tag %}
-      <li>
-        <a href='{{ post.url }}'>{{ post.title }}</a>
-        <time class="pubdate" datetime='{{ post.date | date: "%Y-%m-%d" }}'>{{ post.date | date: "%B %d, %Y" }}</time>
-        {% for tag in post.tags %}
-          <a rel="tag" href="/tags/{{ tag }}">{{ tag }}</a></li>
-        {% endfor %}
+      <li class="hentry">
+        <h1 class="entry-title"><a href='{{ post.url }}'>{{ post.title }}</a></h1>
+        <div class="meta">
+          <abbr class="published updated" title="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</abbr>
+          <span class="entry-tags"><span class="visuallyhidden">Posted in: </span>
+            {% for tag in post.tags %}
+              <a rel="tag" href="/tags/{{ tag }}">{{ tag }}</a>
+            {% endfor %}
+          </span>
+        </div>
         <p class="summary">{{ post.summary }}
       </li>
     {% endif %}
