--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,4 +36,5 @@
   <!--<div class="rss"><a href="http://feeds.feedburner.com/dustankasten"><img src="/images/rss.png" alt="Subscribe to RSS Feed"></a></div>-->
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+<script src="/assets/scripts.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 <script>var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script></body></html>
