--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -332,6 +332,9 @@ body
     background linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0))
     z-index 10
 
+.content
+  position relative
+
 /* main styles }}} */
 /*{{{ header */
 
