Update reading list post

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -523,6 +523,8 @@ a[rel='tag']
 /* article @end */
 /* @group tables */
 
+table
+  margin 1.5em 0
 th
   text-align left
   border-bottom 1px solid #ccc
