Style clean up. Start another article

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -35,6 +35,10 @@ a:focus
 
 a:active, a:hover
   outline: 0
+ 
+h1, h2
+  font-family: Helvetica
+  font-weight: bold
 
 h1
   font-size: 2em
@@ -478,7 +482,7 @@ a[rel='tag']
 .entry-content
   BODY_COPY()
   font-size 1.111em
-  line-height 1.6
+  line-height 1.4
   p
     margin 0
   p + p
@@ -529,6 +533,7 @@ th
   text-align left
   border-bottom 1px solid #ccc
 td
+  padding: 0.333em
   border-bottom 1px solid #ddd
 
 .numbered
