Style and script updates
* Content area is contained so pushState transitions don't bleed over other content
* h1-h3 are the SECONDARY color and Helvetica bold
* Removed the silly 'tagline'
* Actually update the page title on page view change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,17 +17,13 @@
 
 <header id="masthead" rel="banner">
   <a href="/">Dustan Kasten</a>
-  <p>
-    <span class="dos">since 2010</span>
-    <span class="uno">Bringing joy to the internet acronyms</span>
-  </p>
 </header>
-<div class="content">
+<div class="pants"><div class="content">
   {{ content }}
-</div><footer id="footer">
+</div></div><footer id="footer">
   <div class="vcard">
-    <span class="fn">Dustan Kasten</span>
-    <div class="title">Front-end Web Developer</div>
+    <span class="fn visuallyhidden">Dustan Kasten</span>
+    <div class="title">Web Developer</div>
     <!--<div class="org">Skookum Digital Works</div>-->
     <a class="email" href="mailto:dustan.kasten@gmail.com">dustan.kasten@gmail.com</a>
     <a class="url" href="http://github.com/iamdustan">github.com/iamdustan</a>
