Bigger font. Blockquote

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -227,8 +227,8 @@ html, button, input, select, textarea
   color: #222
 
 body
-  font-size: 1em
-  line-height: 1.4
+  font-size: 1.333em
+  line-height: 1.6666
 
 ::-moz-selection
   background: #b3d4fc
@@ -503,12 +503,18 @@ a[rel='tag']
 .entry-summary,
 .entry-content
   BODY_COPY()
-  font-size 1.111em
-  line-height 1.4
+  line-height 1.6666
   p
     margin 0
   p + p
     text-indent 1.8em
+
+blockquote
+  border-left: 3px solid PRIMARY
+  padding: 1.5em
+  background: #f9f9f9
+  margin: 1em 0
+
 
 .related
   border-top 2px solid SECONDARY
