--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -108,7 +108,7 @@ p, pre
 code, kbd, pre, samp
   font-family: monospace, serif
   _font-family: 'courier new', monospace
-  font-size: 1em
+  font-size: 0.91666em
 
 pre
   white-space: pre-wrap
@@ -545,7 +545,14 @@ blockquote
     display block
     font-size 0.75em
 
-
+code
+  background #f9f9f9
+  border 1px solid #ececec
+  border-radius 0.3333em
+  display inline-block
+  line-height 1.3333
+  padding 0 0.333em
+  text-indent 0
 
 /* article @end */
 /* @group tables */
