Fix typo. Remove text-indent from anchor’s in articles

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -344,6 +344,7 @@ body
     margin: -0.333em -0.5em
     text-decoration none
     transition all 0.2s ease-in
+    text-indent 0
     &:focus,
     &:hover
       color brighten(TERTIARY, 30%)
