--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js ie"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 9]><html class="ie"><![endif]-->
+<!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>{{ page.title }}</title>
-<link href="http://feeds.feedburner.com/dustankasten" rel="alternate" title="Dustan Kasten" type="application/atom+xml">
-<meta name="author" content="Dustan Kasten">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width">
-<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Radley:400,400italic'>
-<link rel="stylesheet" href="/assets/styles.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>{{ page.title }}</title>
+  <link href="http://feeds.feedburner.com/dustankasten" rel="alternate" title="Dustan Kasten" type="application/atom+xml">
+  <meta name="author" content="Dustan Kasten">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Radley:400,400italic'>
+  <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
 <!--[if lt IE 9]><p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p><![endif]-->
@@ -31,7 +31,12 @@
   </div>
   <!--<div class="rss"><a href="http://feeds.feedburner.com/dustankasten"><img src="/images/rss.png" alt="Subscribe to RSS Feed"></a></div>-->
 </footer>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-<script src="/assets/scripts.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-<script>var _gaq=[['_setAccount','UA-37699943-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script></body></html>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+<script src="/assets/scripts.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); 
+  ga('create', 'UA-37699943-1', 'auto');
+  ga('send', 'pageview');
+</script>
+</body></html>
 
