Fix push/popState document title setting. CSS page title tweaks

--- a/assets/styles.styl
+++ b/assets/styles.styl
@@ -446,6 +446,7 @@ body
   color SECONDARY
   font-size 2em
   font-weight bold
+  line-height: 1.16666
   margin 0
   text-decoration none
 .entry-title a,
@@ -619,12 +620,6 @@ td
     font-size: 1.3333em
 /* end XXem min-width @end */
 
-/* @group high-res mq */
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5)only screen and (min-resolution: 144dpi)
-  // nothing here
-
-/* high-res mq @end */
 /* @group print */
 
 @media print
