--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,17 @@ layout: default
     </ul>
   </aside>
 </div>
+<div id="disqus_thread"></div>
 
+<script type="text/javascript">
+    var disqus_shortname = 'iamdustan';
+    (function(d,_) {
+      _=d.createElement('script');_.type='text/javascript';_.async=true;
+      _.src='//'+disqus_shortname+'.disqus.com/embed.js';
+      (d.getElementsByTagName('head')[0]).appendChild(_);
+    })(document);
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 {% comment %}
 <aside>
