--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,13 @@
     <script src="https://unpkg.com/master-styles-group"></script>
     <script src="https://unpkg.com/themes.js"></script>
     <script>window.themes = window.themes || new window.Themes()</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-10JXB07ZP3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-10JXB07ZP3');
+    </script>
 
     {{- partial "head-extra.html" . -}}
 </head>
